# songHut

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  verify.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: main.py
backend/app/algorithms/: __init__.py
backend/app/api/: auth.py  files.py  projects.py  scores.py  tasks.py  users.py  ws.py
backend/app/core/: config.py  database.py  deps.py  errors.py  logging.py  middleware.py  respond.py  result.py  security.py
backend/app/models/: __init__.py  file_record.py  project.py  score_record.py  task_record.py  user.py
backend/app/schemas/: __init__.py  auth.py  common.py  project.py  score.py  task.py
backend/app/services/: auth_service.py  file_service.py  project_service.py  score_service.py  task_service.py
backend/app/storage/: __init__.py  factory.py  local.py  protocol.py
backend/app/workers/: __init__.py
frontend/: .npmrc  README.md  package.json
refactoring-plan/: 00-架构概览.md  01-数据模型与格式约定.md  02-后端API契约.md  03-后端模块设计.md  04-算法Pipeline设计.md  05-前端架构设计.md  06-乐谱渲染方案.md  07-跨端方案与Electron壳.md  08-部署与工程化.md  README.md
